@@ -1,3 +1,11 @@
+2003-10-01  Marco Pesenti Gritti  <marco@gnome.org>
+
+	* gtk_buildscript.py:
+	* jhbuild.glade:
+	* jhbuild.py:
+
+	Add a "Do not build" option to the gui.
+
 2003-10-01  Murray Cumming  <murrayc@usa.net>
 
 	* modulesets/gnome26.modules: commented-out dbus because jamesh
